--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pathname-js",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Simply manage paths.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify index.js > dist/pathname.js",
+    "build": "node build.js",
     "doc": "jsdoc2md index.js --template README.hbs --partial partials/*.hbs > README.md",
     "commit": "npm run doc;git add .;git commit;git push",
     "release": "npm run commit;npm publish"
